Fix popup. It was too big for small screens.

--- a/resources/assets/sass/modules/lists/popups/_popup.scss
+++ b/resources/assets/sass/modules/lists/popups/_popup.scss
@@ -6,27 +6,21 @@
 	width: 100%;
 	height: 100%;
 	background: rgba(0,0,0,.4);
-	z-index: 999;
+	z-index: 9999;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	.popup-inner {
-		//position: relative;
 		border-radius: 5px;
-		//margin-top: 10%;
 		background: white;
-		//margin-left: auto;
-		//margin-right: auto;
-		//width: 80%;
 		overflow: scroll;
-		max-height: 650px;
+		max-height: calc(100% - 48px);
 		padding: 25px;
 		margin: 0 30px;
-		//.save {
-		//	position: absolute;
-		//	bottom: 10px;
-		//	right: 10px;
-		//}
+		.popup-title {
+			margin-bottom: 30px;
+			margin-top: 0;
+		}
 		.buttons {
 			display: flex;
 			justify-content: space-between;
